<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:elevation="@dimen/_5sdp"
    android:layout_margin="@dimen/_10sdp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:text="@string/exp_id"/>

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_2sdp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp_type"/>

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_2sdp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp_amount"/>

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>